--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -1,29 +1,63 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-    <title>TrailTruths</title>
+    <title>What's Your Story?</title>
   </head>
   <body>
     <section>
-      <div class="jumbotron hero jumbotron-fluid">
+      <div class="jumbotron hero jumbotron-fluid m-0">
         <div class="container">
             <div class="arrow" id="arrow"></div>
         </div>
-      </div>    
+      </div>
     </section>
 
-    <section id="info-section" class="jumbotron">
-      <h1>oh wow some more section!</h1>
+    <div id="info-section"class="row vh-50">
+      <div class="col-lg banner"></div>
+      <div class="col-lg info-col">
+        <h1 class="info-header">WHAT IS THIS?<br/>
+            AND WHATS YOUR STORY?</h1>
+        <span class="align-middle info" style="text-align: center;">
+          we’re “what’s your story” (hence #WYS) and we want to hear yours! what
+           kinds of things make you special? what are some of your favorite snacks
+           or movies? what is a special talent you mighthave that you don't tell
+           people about in person? this is the beginning of us (fellow riders,
+           walkers, etc.) getting to know one another throughout our communities
+           across the US while encouraging people to get out on the trails and
+           exercise. it revolves around the idea that every stranger has a story
+           to share and we can unify communities using these diverse stories and
+           connect just like trails and maps do. if you are here right now you
+           scanned a QR code that was hung up on a nearby trail. we are happy to
+           have you here! so, go ahead and share your story and enjoy being
+           outside. YOU ARE UGLY!
+         </span>
+      </div>
+    </div>
+    <section style="container">
+      <div id="insta-section"class="row vh-50">
+        <span class="text-light insta-info text-center align-middle">these responses are not being used in any negative way
+          , just to hear stories and see how cool people are all over! you do not
+          have to share your name or where you live, it just makes your
+          responses more identifiable if you see them on the instagram.
+          every two weeks or so there will be a new question put out via
+          QR, and if you follow the instagram handle, you will know when it
+          has been posted. so, please hit the trails and head out into
+          your community and share a new tidbit about yourself.
+          i hope to publish some stories via instagram and share
+          the journeys taking place all over our country! </span>
+      </div>
     </section>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-    <script src="js/main.js" type="text/javascript">
+    <script src="{% static 'js/main.js' %}" type="text/javascript">
 
     </script>
   </body>
