--- a/static/css/styles.scss
+++ b/static/css/styles.scss
@@ -1,3 +1,4 @@
+// mixins
 @mixin animation-keyframes {
   $animation-number: 0 !default !global;
   $animation-number: $animation-number + 1 !global;
@@ -10,6 +11,26 @@
   }
 }
 
+@mixin mobile {
+  @media (max-width: 768px) { @content }
+}
+
+//fonts
+@font-face {
+    src: url("./fonts/Hanson-Bold.ttf");
+    font-family: "Hanson-Bold";
+}
+
+
+// colors
+$dark-grey: #333;
+$text: #2b5291;
+$header-stroke: #305899;
+
+
+html {
+  background-color: $dark-grey;
+}
 
 body {
   overflow-y: scroll;  /* Keep scroll functionality */
@@ -22,14 +43,17 @@ body::-webkit-scrollbar {
 }
 
 .hero {
-  color: white;
+  color: $dark-grey !important;
+  background-color: $dark-grey !important;
   background-image: url("res/hero.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
 
-  height: 100vh;
+  @include mobile {
+    background-image: url("res/hero-mobile.png");
+  };
 }
 
 .container .arrow {
@@ -68,4 +92,43 @@ body::-webkit-scrollbar {
             top: 80px;
        }
     }
+}
+
+
+.vh-50 {
+  height: 50vh;
+}
+
+.banner {
+  color: white;
+  background-image: url("res/banner.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+.info-col{
+  background-color: #fff;
+}
+
+.info-header {
+    font-family: 'Hanson-Bold','Arial',sans-serif;
+      color: white;
+      text-stroke: 3px $header-stroke;
+      -webkit-text-stroke: 3px $header-stroke;
+}
+
+.info {
+  font-family: 'Hanson-Bold','Arial',sans-serif;
+  font-size: .8em;
+  color: $text;
+}
+
+#insta-section {
+  background-color: $dark-grey;
+}
+
+.insta-info {
+
 }
