--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -110,6 +110,17 @@
                       <label for="test" class="mx-auto">Lorem ipsum docet docet?</label>
                       <input class="w-75 mx-auto rounded" type="text" name="test" value="">
                     </div>
+                    <div class="row">
+                      <div class="col emote">
+                          <img src="{% static 'css/res/happy.svg' %}" alt="">
+                      </div>
+                      <div class="col emote">
+                          <img src="{% static 'css/res/meh.svg' %}" alt="">
+                      </div>
+                      <div class="col emote">
+                          <img src="{% static 'css/res/sad.svg' %}" alt="">
+                      </div>
+                    </div>
                   </div>
               </div>
           </section>
