added polling looks

--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -106,11 +106,7 @@
                       <label for="test" class="mx-auto">Lorem ipsum docet docet?</label>
                       <input class="w-75 mx-auto rounded" type="text" name="test" value="">
                     </div>
-                    <div class="row short-answer">
-                      <label for="test" class="mx-auto">Lorem ipsum docet docet?</label>
-                      <input class="w-75 mx-auto rounded" type="text" name="test" value="">
-                    </div>
-                    <div class="row">
+                    <div class="row pb-4">
                       <div class="col emote">
                           <img src="{% static 'css/res/happy.svg' %}" alt="">
                       </div>
@@ -120,6 +116,19 @@
                       <div class="col emote">
                           <img src="{% static 'css/res/sad.svg' %}" alt="">
                       </div>
+                    </div>
+                    <div class="row short-answer pb-4">
+                      <label for="test" class="mx-auto">Lorem ipsum docet docet?</label>
+                      <input class="w-75 mx-auto rounded" type="text" name="test" value="">
+                    </div>                    
+                    <div class="row short-answer">
+                      <label for="test" class="mx-auto">Lorem ipsum docet docet?</label>
+                      <input class="w-75 mx-auto rounded" type="text" name="test" value="">
+                    </div>
+                    <div class="row">
+                      <button type="submit" class="mx-auto btn text-uppercase">
+                        <img src="{% static 'css/res/submit.png' %}">
+                      </button>
                     </div>
                   </div>
               </div>
