--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -3,7 +3,8 @@
   src: url("./fonts/Hanson-Bold.ttf");
   font-family: "Hanson-Bold"; }
 html {
-  background-color: #333; }
+  background-color: #333;
+  font-family: "Hanson-Bold", "Arial", sans-serif; }
 
 body {
   overflow-y: scroll;
@@ -71,8 +72,8 @@ body::-webkit-scrollbar {
   background-color: #fff; }
 
 .info-header {
-  font-family: 'Hanson-Bold','Arial',sans-serif;
   color: white;
+  font-family: "Hanson-Bold", "Arial", sans-serif;
   text-stroke: 3px #305899;
   -webkit-text-stroke: 3px #305899; }
   @media (max-width: 768px) {
@@ -82,9 +83,9 @@ body::-webkit-scrollbar {
       -webkit-text-stroke: 2px #305899; } }
 
 .info {
-  font-family: 'Hanson-Bold','Arial',sans-serif;
   font-size: .8em;
-  color: #2b5291; }
+  color: #2b5291;
+  font-family: "Hanson-Bold", "Arial", sans-serif; }
   @media (max-width: 768px) {
     .info {
       font-size: .75em; } }
@@ -94,14 +95,17 @@ body::-webkit-scrollbar {
 
 .poll {
   color: white;
-  background-image: url("res/gradient.png");
+  background-image: url("res/poll-gradient.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-attachment: fixed; }
+  background-attachment: fixed;
+  font-family: "Hanson-Bold", "Arial", sans-serif;
+  font-weight: lighter;
+  font-size: .75em; }
   @media (max-width: 768px) {
     .poll {
-      background-image: url("res/gradient-mobile.png"); } }
+      background-image: url("res/poll-gradient.png"); } }
 
 .short-answer {
   padding-bottom: 10vh; }
@@ -112,5 +116,9 @@ label {
 .emote img {
   width: 25vw;
   height: auto; }
+
+.btn {
+  color: #2b5291;
+  border-image-repeat: none; }
 
 /*# sourceMappingURL=styles.css.map */
