--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -13,28 +13,20 @@
       <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
 
       <!-- Favicon -->
-      <link rel="apple-touch-icon" sizes="57x57" href="{% static 'icon/apple-icon-57x57.png' %}">
-      <link rel="apple-touch-icon" sizes="60x60" href="{% static 'icon/apple-icon-60x60.png' %}">
-      <link rel="apple-touch-icon" sizes="72x72" href="{% static 'icon/apple-icon-72x72.png' %}">
-      <link rel="apple-touch-icon" sizes="76x76" href="{% static 'icon/apple-icon-76x76.png' %}">
-      <link rel="apple-touch-icon" sizes="114x114" href="{% static 'icon/apple-icon-114x114.png' %}">
-      <link rel="apple-touch-icon" sizes="120x120" href="{% static 'icon/apple-icon-120x120.png' %}">
-      <link rel="apple-touch-icon" sizes="144x144" href="{% static 'icon/apple-icon-144x144.png' %}">
-      <link rel="apple-touch-icon" sizes="152x152" href="{% static 'icon/apple-icon-152x152.png' %}">
-      <link rel="apple-touch-icon" sizes="180x180" href="{% static 'icon/apple-icon-180x180.png' %}">
-      <link rel="icon" type="image/png" sizes="192x192"  href="{% static 'icon/android-icon-192x192.png' %}">
-      <link rel="icon" type="image/png" sizes="32x32" href="{% static 'icon/favicon-32x32.png' %}">
-      <link rel="icon" type="image/png" sizes="96x96" href="{% static 'icon/favicon-96x96.png' %}">
-      <link rel="icon" type="image/png" sizes="16x16" href="{% static 'icon/favicon-16x16.png' %}">
-      <link rel="manifest" href="{% static 'icon/manifest.json' %}">
-      <meta name="msapplication-TileColor" content="#1df8ec">
-      <meta name="msapplication-TileImage" content="{% static 'icon/ms-icon-144x144.png' %}">
-      <meta name="theme-color" content="#1df8ec">
+      <link rel="shortcut icon" href="{% static 'icon/favicon.ico' %}" type="image/x-icon">
+      <link rel="icon" href="{% static 'icon/favicon.ico' %}" type="image/x-icon">
 
       <!-- Font Awesome -->
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
-      <title>What's Your Story?</title>
+      <title>HiLo Arlington</title>
+
+     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+     <script>
+       function onSubmit(token) {
+         document.getElementById("demo-form").submit();
+       }
+     </script>
     </head>
     <body>
         <section class="jumbotron hero jumbotron-fluid m-0">
@@ -100,13 +92,28 @@
             -->
 
           <section>
-              <div class="jumbotron poll jumbotron-fluid m-0">
-                  <div class="container">
-                    <div class="row short-answer">
-                      <label for="test" class="mx-auto">Lorem ipsum docet docet?</label>
+              <div style="height=50px!important;" class="jumbotron poll jumbotron-fluid m-0">
+                <div class="container">
+                  <form method="post">
+                    {% csrf_token %} 
+                    <div class="row title pb-3 ">
+                      <p for="test" class="mx-auto subtitle">NOW IS YOUR TIME TO SHINE</p>
+                    </div>
+                    <div class="row pb-3 short-answer">
+                      <label for="test" class="mx-auto">What was the <span class="hi">Hi</span> of this week?</label>
                       <input class="w-75 mx-auto rounded" type="text" name="test" value="">
                     </div>
-                    <div class="row pb-4">
+                    <div class="row pb-3 short-answer">
+                      <label for="test" class="mx-auto">What was the <span class="lo">Lo</span> of this week?</label>
+                      <input class="w-75 mx-auto rounded" type="text" name="test" value="">
+                    </div>
+                    <div class="row pb-1 subtitle">
+                      <p class="mx-auto">SOME MORE QUESTIONS FOR THE SOUL</p>
+                    </div>
+                    <div class="row pb-3 short-answer">
+                      <label for="test" class="mx-auto">how are you feeling today?</label>
+                    </div>
+                    <div class="row pb-5">
                       <div class="col emote">
                           <img src="{% static 'css/res/happy.svg' %}" alt="">
                       </div>
@@ -117,12 +124,12 @@
                           <img src="{% static 'css/res/sad.svg' %}" alt="">
                       </div>
                     </div>
-                    <div class="row short-answer pb-4">
-                      <label for="test" class="mx-auto">Lorem ipsum docet docet?</label>
+                    <div class="row short-answer pb-3">
+                      <label for="test" class="mx-auto">what's your name?</label>
                       <input class="w-75 mx-auto rounded" type="text" name="test" value="">
                     </div>                    
-                    <div class="row short-answer">
-                      <label for="test" class="mx-auto">Lorem ipsum docet docet?</label>
+                    <div class="row short-answer pt-1 pb-3">
+                      <label for="test" class="mx-auto">where are you from?</label>
                       <input class="w-75 mx-auto rounded" type="text" name="test" value="">
                     </div>
                     <div class="row">
@@ -130,7 +137,8 @@
                         <img src="{% static 'css/res/submit.png' %}">
                       </button>
                     </div>
-                  </div>
+                  </form>
+                </div>
               </div>
           </section>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
