--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2,9 +2,21 @@
 @font-face {
   src: url("./fonts/Hanson-Bold.ttf");
   font-family: "Hanson-Bold"; }
+@font-face {
+  src: url("./fonts/FuturaPTMedium.otf");
+  font-family: "Futura";
+  font-weight: normal;
+  font-style: normal; }
+@font-face {
+  src: url("./fonts/FuturaPTLight.otf");
+  font-family: "Futura-Light"; }
+@font-face {
+  src: url("./fonts/FuturaPTHeavy.otf");
+  font-family: "Futura-Heavy"; }
 html {
   background-color: #333;
-  font-family: "Hanson-Bold", "Arial", sans-serif; }
+  font-family: "Hanson-Bold", "Arial", sans-serif;
+  overflow-x: none; }
 
 body {
   overflow-y: scroll;
@@ -20,14 +32,14 @@ body::-webkit-scrollbar {
 .hero {
   color: #333 !important;
   background-color: #333 !important;
-  background-image: url("res/hero.png");
+  background-image: url("res/hilo-hero-text.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed; }
   @media (max-width: 768px) {
     .hero {
-      background-image: url("res/hero-mobile.png"); } }
+      background-image: url("res/hilo-hero-text-mobile.png"); } }
 
 .arrow {
   cursor: pointer;
@@ -93,9 +105,19 @@ body::-webkit-scrollbar {
 #insta-section {
   background-color: #333; }
 
+.bg-colored:before {
+  right: -999em;
+  background: #0b3b52;
+  content: '';
+  display: block;
+  position: absolute;
+  width: 999em;
+  top: 0;
+  bottom: 0; }
+
 .poll {
   color: white;
-  background-image: url("res/poll-gradient.png");
+  background-image: url("res/gradient-mobile.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -105,10 +127,18 @@ body::-webkit-scrollbar {
   font-size: .75em; }
   @media (max-width: 768px) {
     .poll {
-      background-image: url("res/poll-gradient.png"); } }
+      background-image: url("res/gradient-mobile.png"); } }
 
 .short-answer {
-  padding-bottom: 10vh; }
+  font-size: 1.2em; }
+
+.title {
+  color: #42b8c7;
+  font-size: 1.45em; }
+
+.subtitle {
+  color: #42b8c7;
+  font-size: 1.15em; }
 
 label {
   font-size: 1.25em; }
@@ -120,5 +150,11 @@ label {
 .btn {
   color: #2b5291;
   border-image-repeat: none; }
+
+.hi {
+  color: #48B93E; }
+
+.lo {
+  color: #E34848; }
 
 /*# sourceMappingURL=styles.css.map */
