--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -1,34 +1,9 @@
+{% extends 'homepage/base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-    <head>
-      <!-- Required meta tags -->
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+{% load widget_tweaks %}
 
-      <!-- Bootstrap CSS -->
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-      <!-- Stylesheet -->
-      <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
-
-      <!-- Favicon -->
-      <link rel="shortcut icon" href="{% static 'icon/favicon.ico' %}" type="image/x-icon">
-      <link rel="icon" href="{% static 'icon/favicon.ico' %}" type="image/x-icon">
-
-      <!-- Font Awesome -->
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-
-      <title>HiLo Arlington</title>
-
-     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-     <script>
-       function onSubmit(token) {
-         document.getElementById("demo-form").submit();
-       }
-     </script>
-    </head>
-    <body>
+{% block content %}
         <section class="jumbotron hero jumbotron-fluid m-0">
             <div class="container">
               <div class="arrow" id="arrow"></div>
@@ -77,61 +52,91 @@
                 </p>
             </div>
         </div>
-        <!-- Insta info
-            these responses are not being used in any negative way
-              , just to hear stories and see how cool people are all over! you do not
-              have to share your name or where you live, it just makes your
-              responses more identifiable if you see them on the instagram.
-              every two weeks or so there will be a new question put out via
-              QR, and if you follow the instagram handle, you will know when it
-              has been posted. so, please hit the trails and head out into
-              your community and share a new tidbit about yourself.
-              i hope to publish some stories via instagram and share
-              the journeys taking place all over our country!
-
-            -->
-
           <section>
-              <div style="height=50px!important;" class="jumbotron poll jumbotron-fluid m-0">
+              <div class="jumbotron poll jumbotron-fluid m-0">
                 <div class="container">
-                  <form method="post">
-                    {% csrf_token %} 
+                  {% if messages %}
+                    {% for message in messages %}
+                      <div class="alert alert-{{ message.tags }} alert-dismissible fade show">
+                        {{ message }}
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                    {% endfor %}
+                  {% endif %}
+                  <form id='poll' method="POST">
+                    {% csrf_token %}
+                    {% for hidden in form.hidden_fields %}
+                      {{ hidden }}
+                    {% endfor %}
                     <div class="row title pb-3 ">
                       <p for="test" class="mx-auto subtitle">NOW IS YOUR TIME TO SHINE</p>
                     </div>
+                    {% if hi_text %}
+                      <div class="row pb-3 short-answer">
+                        <label class="mx-auto" for="{{ form.hi.id_for_label }}">{{ hi_text|safe }}</label>
+                        {{ form.hi|add_class:'w-75 mx-auto rounded' }}
+                        {% for error in form.hi.errors %}
+                          <span class="help-block">{{ error }}</span>
+                        {% endfor %}
+                      </div>
+                    {% endif %}
+                    {% if lo_text %}
                     <div class="row pb-3 short-answer">
-                      <label for="test" class="mx-auto">What was the <span class="hi">Hi</span> of this week?</label>
-                      <input class="w-75 mx-auto rounded" type="text" name="test" value="">
+                      <label class="mx-auto" for="{{ form.lo.id_for_label }}">What was the <span class="lo">Lo</span> of this week?</label>
+                      {{ form.lo|add_class:'w-75 mx-auto rounded' }}
+                      {% for error in form.lo.errors %}
+                        <span class="help-block">{{ error }}</span>
+                      {% endfor %}
                     </div>
-                    <div class="row pb-3 short-answer">
-                      <label for="test" class="mx-auto">What was the <span class="lo">Lo</span> of this week?</label>
-                      <input class="w-75 mx-auto rounded" type="text" name="test" value="">
-                    </div>
+                    {% endif %}
                     <div class="row pb-1 subtitle">
                       <p class="mx-auto">SOME MORE QUESTIONS FOR THE SOUL</p>
                     </div>
+                    {% if emotion_text %}
                     <div class="row pb-3 short-answer">
                       <label for="test" class="mx-auto">how are you feeling today?</label>
                     </div>
-                    <div class="row pb-5">
+                    <div class="row pb-3">
+
+                      {% for radio in form.emotion %}
                       <div class="col emote">
-                          <img src="{% static 'css/res/happy.svg' %}" alt="">
+                        <label for="{{ radio.id_for_label }}">
+                          {{ radio.tag }}
+                          <img src="{% static 'css/res/'|add:radio.choice_label|add:'.svg' %}" alt="">
+                        </label>
                       </div>
-                      <div class="col emote">
-                          <img src="{% static 'css/res/meh.svg' %}" alt="">
-                      </div>
-                      <div class="col emote">
-                          <img src="{% static 'css/res/sad.svg' %}" alt="">
-                      </div>
+                      {% endfor %}
                     </div>
-                    <div class="row short-answer pb-3">
-                      <label for="test" class="mx-auto">what's your name?</label>
-                      <input class="w-75 mx-auto rounded" type="text" name="test" value="">
-                    </div>                    
-                    <div class="row short-answer pt-1 pb-3">
-                      <label for="test" class="mx-auto">where are you from?</label>
-                      <input class="w-75 mx-auto rounded" type="text" name="test" value="">
+                    {% endif %}
+                    {% if name_text %}
+                    <div class="row pb-3 short-answer">
+                      <label class="mx-auto" for="{{ form.name.id_for_label }}">{{ name_text|safe }}</label>
+                      {{ form.name|add_class:'w-75 mx-auto rounded' }}
+                      {% for error in form.name.errors %}
+                        <span class="help-block">{{ error }}</span>
+                      {% endfor %}
                     </div>
+                    {% endif %}
+                    {% if place_text %}         
+                    <div class="row pb-3 short-answer">
+                      <label class="mx-auto" for="{{ form.place.id_for_label }}">{{ place_text|safe }}</label>
+                      {{ form.place|add_class:'w-75 mx-auto rounded' }}
+                      {% for error in form.place.errors %}
+                        <span class="help-block">{{ error }}</span>
+                      {% endfor %}
+                    </div>
+                    {% endif %}
+                    {% if question_text %}         
+                    <div class="row pb-3 short-answer">
+                      <label class="mx-auto" for="{{ form.question.id_for_label }}">{{ question_text|safe }}</label>
+                      {{ form.question|add_class:'w-75 mx-auto rounded' }}
+                      {% for error in form.question.errors %}
+                        <span class="help-block">{{ error }}</span>
+                      {% endfor %}
+                    </div>
+                    {% endif %}
                     <div class="row">
                       <button type="submit" class="mx-auto btn text-uppercase">
                         <img src="{% static 'css/res/submit.png' %}">
@@ -141,9 +146,4 @@
                 </div>
               </div>
           </section>
-        <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-        <script src="{% static 'js/main.js' %}" type="text/javascript"></script>
-    </body>
-</html>
+{% endblock %}
